--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "apollo-server-express": "^2.15.1",
+    "mongoose": "^7.0.3"
   }
 }
