--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "apollo-link-context": "^1.0.20",
-    "apollo-server-express": "^2.15.1",
+    "apollo-server-express": "^2.26.1",
+    "graphql": "^15.8.0",
     "mongoose": "^7.0.3"
   }
 }
