--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
     "apollo-link-context": "^1.0.20",
     "apollo-server-express": "^2.26.1",
     "graphql": "^15.8.0",
