--- a/package.json
+++ b/package.json
@@ -10,17 +10,9 @@
     "build": "cd client && npm run build"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Warfa Hassan",
+  "license": "MIT",
   "devDependencies": {
     "concurrently": "^5.1.0"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.11",
-    "@apollo/react-hooks": "^4.0.0",
-    "apollo-link-context": "^1.0.20",
-    "apollo-server-express": "^2.26.1",
-    "graphql": "^15.8.0",
-    "mongoose": "^7.0.3"
   }
 }
